--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <title>Tic-Tac-Toe</title>
     <style>
+
         .p-2 {
             height: 25vh;
             width: 10vw;
@@ -20,9 +21,36 @@
             justify-content: center;
             align-items: center;
         }
-        b{
+
+        b {
             font-size: 60px;
             font-family: 'Courier New', Courier, monospace;
+        }
+        @media only screen and (max-width: 900px) {
+            .p-2 {
+                height: 23vh;
+                width: 14vw;
+                margin: 10px;
+                background-color: black;
+                opacity: 0.3;
+                color: white;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+        }
+        @media only screen and (max-width: 800px) {
+            .p-2 {
+                height: 22vh;
+                width: 18vw;
+                margin: 10px;
+                background-color: black;
+                opacity: 0.3;
+                color: white;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
         }
     </style>
 </head>
@@ -52,4 +80,5 @@
         crossorigin="anonymous"></script>
     <script src="index.js"></script>
 </body>
+
 </html>
