--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <title>Tic-Tac-Toe</title>
     <style>
-
+        /* .gree{
+            color: green;
+        } */
         .p-2 {
             height: 25vh;
             width: 10vw;
@@ -61,7 +63,7 @@
     <!-- PlayBoard -->
 
     <div class="d-flex justify-content-center">
-        <div class="p-2 bd-highlight" onclick="fill(0)" id="1"></div>
+        <div class="p-2 bd-highlight gree" onclick="fill(0)" id="1"></div>
         <div class="p-2 bd-highlight" onclick="fill(1)"></div>
         <div class="p-2 bd-highlight" onclick="fill(2)"></div>
     </div>
