--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             height: 25vh;
             width: 10vw;
             margin: 10px;
-            background-color: black;
-            opacity: 0.3;
+            background-color: rgba(0,0,0,.3);
+            /* opacity: 0.3; */
             color: white;
             display: flex;
             justify-content: center;
