added confirm box

--- a/index.html
+++ b/index.html
@@ -54,6 +54,19 @@
                 align-items: center;
             }
         }
+        @media only screen and (max-width: 361px) {
+            .p-2 {
+                height: 18vh;
+                width: 21vw;
+                margin: 6px;
+                background-color: black;
+                opacity: 0.3;
+                color: white;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+        }
     </style>
 </head>
 
