--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" id="close-btn">Close</button>
+                        <button type="button" class="btn btn-secondary" id="close-btn">Play Anonymously</button>
                         <button type="submit" class="btn btn-primary">Begin game</button>
                     </div>
                 </form>
